--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,12 +20,26 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v2
+
+      # Start Docker Compose
+      - name: Start Docker Compose
+        run: docker-compose up -d
 
       - name: Install Rust
         uses: actions-rust-lang/setup-rust-toolchain@v1.5.0
         with:
           components: llvm-tools-preview
+
+      # Cache dependencies and build artifacts
+      - name: Cache build artifacts and dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2.21.11
