--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,32 +4,36 @@ on:
   push:
     branches: [master]
   pull_request:
-
-permissions:
-  contents: read
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    branches:
+      - master
 
 env:
   CARGO_TERM_COLOR: always
   SQLX_OFFLINE: true
 
 jobs:
-  coverage:
-    runs-on: ubuntu-latest
+  test:
+    name: ${{ matrix.os }}-rust-${{ matrix.rust }}
+    runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.rust != 'stable' }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        rust: [stable]
+
     steps:
       - uses: actions/checkout@v2
-
+      
       # Start Docker Compose
       - name: Start Docker Compose
         run: docker-compose up -d
 
-      - name: Install Rust
-        uses: actions-rust-lang/setup-rust-toolchain@v1.5.0
+      - uses: actions-rs/toolchain@v1
+        name: Install toolchain
         with:
-          components: llvm-tools-preview
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
 
       # Cache dependencies and build artifacts
       - name: Cache build artifacts and dependencies
@@ -40,6 +44,27 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+        env:
+          SQLX_OFFLINE: true
+
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+        env:
+          BACKBLAZE_BUCKET_ID: ${{ secrets.BACKBLAZE_BUCKET_ID }}
+          BACKBLAZE_KEY: ${{ secrets.BACKBLAZE_KEY }}
+          BACKBLAZE_KEY_ID: ${{ secrets.BACKBLAZE_KEY_ID }}
+          S3_ACCESS_TOKEN: ${{ secrets.S3_ACCESS_TOKEN }}
+          S3_SECRET: ${{ secrets.S3_SECRET }}
+          S3_URL: ${{ secrets.S3_URL }}
+          S3_REGION: ${{ secrets.S3_REGION }}
+          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+          SQLX_OFFLINE: true
+          DATABASE_URL: postgresql://labrinth:labrinth@localhost/postgres
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2.21.11
@@ -64,3 +89,9 @@ jobs:
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+      # - name: Install Rust
+      #   uses: actions-rust-lang/setup-rust-toolchain@v1.5.0
+      #   with:
+      #     components: llvm-tools-preview
+
