--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -51,20 +51,20 @@ jobs:
         env:
           SQLX_OFFLINE: true
 
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-        env:
-          BACKBLAZE_BUCKET_ID: ${{ secrets.BACKBLAZE_BUCKET_ID }}
-          BACKBLAZE_KEY: ${{ secrets.BACKBLAZE_KEY }}
-          BACKBLAZE_KEY_ID: ${{ secrets.BACKBLAZE_KEY_ID }}
-          S3_ACCESS_TOKEN: ${{ secrets.S3_ACCESS_TOKEN }}
-          S3_SECRET: ${{ secrets.S3_SECRET }}
-          S3_URL: ${{ secrets.S3_URL }}
-          S3_REGION: ${{ secrets.S3_REGION }}
-          S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-          SQLX_OFFLINE: true
-          DATABASE_URL: postgresql://labrinth:labrinth@localhost/postgres
+      # - uses: actions-rs/cargo@v1
+      #   with:
+      #     command: test
+      #   env:
+      #     BACKBLAZE_BUCKET_ID: ${{ secrets.BACKBLAZE_BUCKET_ID }}
+      #     BACKBLAZE_KEY: ${{ secrets.BACKBLAZE_KEY }}
+      #     BACKBLAZE_KEY_ID: ${{ secrets.BACKBLAZE_KEY_ID }}
+      #     S3_ACCESS_TOKEN: ${{ secrets.S3_ACCESS_TOKEN }}
+      #     S3_SECRET: ${{ secrets.S3_SECRET }}
+      #     S3_URL: ${{ secrets.S3_URL }}
+      #     S3_REGION: ${{ secrets.S3_REGION }}
+      #     S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+      #     SQLX_OFFLINE: true
+      #     DATABASE_URL: postgresql://labrinth:labrinth@localhost/postgres
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2.21.11
