--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: Coverage
+name: Coverage-1
 
 on:
   push:
@@ -35,44 +35,13 @@ jobs:
           toolchain: ${{ matrix.rust }}
           override: true
 
-      # Cache dependencies and build artifacts
-      - name: Cache build artifacts and dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-        env:
-          SQLX_OFFLINE: true
-
-      # - uses: actions-rs/cargo@v1
-      #   with:
-      #     command: test
-      #   env:
-      #     BACKBLAZE_BUCKET_ID: ${{ secrets.BACKBLAZE_BUCKET_ID }}
-      #     BACKBLAZE_KEY: ${{ secrets.BACKBLAZE_KEY }}
-      #     BACKBLAZE_KEY_ID: ${{ secrets.BACKBLAZE_KEY_ID }}
-      #     S3_ACCESS_TOKEN: ${{ secrets.S3_ACCESS_TOKEN }}
-      #     S3_SECRET: ${{ secrets.S3_SECRET }}
-      #     S3_URL: ${{ secrets.S3_URL }}
-      #     S3_REGION: ${{ secrets.S3_REGION }}
-      #     S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-      #     SQLX_OFFLINE: true
-      #     DATABASE_URL: postgresql://labrinth:labrinth@localhost/postgres
-
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@v2.21.11
         with:
           tool: cargo-llvm-cov
 
       - name: Generate code coverage
-        run: cargo llvm-cov --workspace --all-features --codecov --output-path codecov.json
+        run: cargo llvm-cov --locked --all-features --codecov --output-path codecov.json
         env:
           BACKBLAZE_BUCKET_ID: ${{ secrets.BACKBLAZE_BUCKET_ID }}
           BACKBLAZE_KEY: ${{ secrets.BACKBLAZE_KEY }}
